src/main/java/com/example/project_telegram_bot/error/UserTgException.java
package com.example.project_telegram_bot.error;

public class UserTgException extends RuntimeException {

    public UserTgException(String message) {
    }

    public UserTgException(String message, Throwable cause) {
    }
}



